# ChangeLog for dev-python/into
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/into/ChangeLog,v 1.1 2014/12/19 08:04:39 patrick Exp $

*into-0.1.3 (19 Dec 2014)

  19 Dec 2014; Patrick Lauer <patrick@gentoo.org> +into-0.1.3.ebuild,
  +metadata.xml:
  Initial import, needed by blaze, ebuild by me