@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST into-0.1.3.tar.gz 31161 SHA256 a92642e2a7372b477488c9d92c3e4d03b5412908dd291dd85020a7eb97c49d44 SHA512 a201ab8b2b2e4d2455232edde35bdbbdbf8432152ec6f7084300af7ee8960d476c00326342c0a658b0a8873a3a0ee025cf24b87b4ae45fa4f1d94db7a5a374ef WHIRLPOOL 894b9045917c06c5540c248415f0b4ae1cd2e86d979417f23589a0b41ecc726f5a55d54b9bcc1808370344b6be31c277efaeec5c2c13bc8e3e960ac38345aa17
+DIST into-0.2.1.tar.gz 75510 SHA256 bf4a8d7c4141984ba5db201e076d5ecfdb3a32c0f8ca311d4f49b030fcb04a2f SHA512 3df1a55f2a8881c1d952baeb5484d93245085bff02a38266b9ca478ade8cce23c0b16b6be690ada7e279f0f22ea9adf934a0105cbea2ce4d243e03fc73cc1c9e WHIRLPOOL a5e5dd5845e2dd741165fd484b4314c05539a95b76f840e8b71acb3c42aaaf8e2a01a34ca6881a79cc6db5b2b19b2c8413489469a8af2fee188841f2e0a3a474
 EBUILD into-0.1.3.ebuild 502 SHA256 a2d9e28d0c10b7a96297ddf9b5ae82ac741eebbb7daf483b561a294eb5e9cc8e SHA512 64b7ba515029ee6ed1c94e7b88c7cb46a65a4ed928890a45a76fb11d56a979aa8644b54c880f7e137bc17a851a4e8741c9d7d64728a7dd38f5b0246e3e7ac7fa WHIRLPOOL 9e9536eacb23a5545958286fd4b9ba70432949665cb53cd26441fb81f5126b6a33aee40a21a18286a7e3b986268b0e326edafeb5748d92a905d3c977fba5f3e5
-MISC ChangeLog 366 SHA256 0d4f3411dc2785561f6dbcc293b6c0237bda369dd6a14fd358a34593bb7fb528 SHA512 6f2e01e24cf6a233255b71dc0e555beb80cb66056e7fae86ced18730264a87e479ae48ed7dcb0e3230647004f716e44840f4df519cae9b3b3368baef5aec6b99 WHIRLPOOL 743a2b7f13e93655d53ed42a29f1980b55d48928da7e99705ea62a96f2dcf6482de335d2ab3b65c4412ba01c8fc9e653df0002a31f285046d462c6eb49cf4386
+EBUILD into-0.2.1.ebuild 776 SHA256 ed2327aaed636057573ef8f268b688d34e064c49a6357593255dd8edb9391f4a SHA512 7fa71f1d8a63c0c9cbe1062827f0f1e7d662fa45b58ab8b0bbf434a12e2d12febcdb333d17d6fbeadb9b1364c7370bb7f52dfabc5c2cab711268edaf312530a1 WHIRLPOOL 27f267c4f65883b5b6c1f5912ba143a581abcff962f2c267cc5c7e92ff12fe794eeaf1339226c4f6018dadf4618c821011e1f7bba7048f2285ecbd41117aed61
+MISC ChangeLog 483 SHA256 3d0d35b86880ffe9802ab132a672f279c1d31dcccc5aae213c897a4c22a294cc SHA512 71b1559ab7a09e59186431b74dfb2fa2909f4ce2a6e27f17237cf24b71d2cc085316fee5f86dd4d4c1219b94e466c024030ba65d9946ea48d71cae45b1c93ef5 WHIRLPOOL 4e81fea3006b6f7382a96c07c11809909e2f4500e0f6d1048b45fd468c32e4446ea6a630f181ef1f2a666065992d27618f082875f86ad1a0f063c7d7f7312973
 MISC metadata.xml 159 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4 SHA512 d5a29b9f6ecddfc368dc0f1f8919cd3c3d6ecf2c7a82bc8d4c0dd51b7aa15561ed0462acb8ae39bc84f97e706e82d9b4b06357494f164f1648219f604b473fbe WHIRLPOOL 36e19b63a1b307cc200e1d73499b7477f73799db3909e71b5a0916084728351c76d400f65e2c8b3f8fffb2c9ba54c0bd235f785b47414178d98f11d64a9420d7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTzITsACgkQso7CE7gHKw2alACfVT42m4vNl84qiZCfSpiLclC5
+ojkAoNIbyriVBuRipL5FLpj9WcmZ3gdR
+=TMV3
+-----END PGP SIGNATURE-----
