@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/into
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/into/ChangeLog,v 1.1 2014/12/19 08:04:39 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/into/ChangeLog,v 1.2 2015/03/01 14:24:41 idella4 Exp $
+
+*into-0.2.1 (01 Mar 2015)
+
+  01 Mar 2015; Ian Delaney <idella4@gentoo.org> +into-0.2.1.ebuild:
+  bump; correct deps
 
 *into-0.1.3 (19 Dec 2014)
 
